Fix grid spacing with flex-based layout for perfect fit

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     flex-wrap: wrap;
     width: 512px;
     height: 512px;
-    border: 0.5px solid black;
 
 }
 
